# ai-business-platform

./: .gitignore  API_ENDPOINTS.md  Layout.js  README.md  Sidebar.js  correct-restore.sh  docker-compose.local.yml  docker-compose.yml  fix-ai-insights-and-dashboard.sh  fix-ai-insights-syntax.sh  fix-all-pages-layout.sh  fix-app-import.sh  fix-dashboard-layout.sh  fix-duplicate-menu.sh  fix-index-page.sh  fix-menu-duplicate-final.sh  fix-menu-duplication.sh  fix-pages-display.sh  fix-responsive.sh  fix_backend.sh  package-lock.json  package.json  restart-platform.sh  restore-all.sh  restore-from-git.sh  start.sh
backend/: .dockerignore  Cargo.toml  Dockerfile  build.rs  sqlx-data.json
backend/migrations/: 0001_initial_setup.sql
backend/src/: config.rs  main.rs
backend/src/database/: mod.rs  postgres.rs  redis.rs
backend/src/handlers/: ai.rs  api.rs  auth.rs  auth_fallback.rs  config.rs  customers.rs  dashboard.rs  health.rs  mod.rs  predictions.rs  sales.rs  users.rs
backend/src/models/: analytics.rs  common.rs  mod.rs  product.rs  sale.rs  user.rs
backup_20251225_205116/components/: Header.js  Layout.js  (+2 more)
components/: Header.js  Sidebar.js
frontend/: .dockerignore  Dockerfile  _app.js  check-duplicates.sh  final-fix.sh  fix-all-complete.sh  fix-all-issues.sh  fix-all.sh  fix-duplicate-menu.sh  fix-final.sh  fix-hydration.sh  fix-layout.sh  fix-pages.sh  fix-routing.sh  next.config.js  package-lock.json  package.json  remove-duplicate-menus.sh  restore-menu.sh  start.sh  tailwind.config.js
mobile/: App.tsx  app.json  package-lock.json  package.json
(+55 files in other folders)
