[package]
name = "ai-business-platform"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
rand = "0.8"

[dev-dependencies]
actix-rt = "2.0"

# Remover dependências complexas de IA por enquanto
# async-openai = "0.16"
# rust-bert = "0.19"
# tch = "0.13"
# smartcore = "0.3"
# ndarray = "0.15"
# statrs = "0.16"
